CB-12428 Introduce custom UMS user Json path